--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,12 +168,12 @@ nav .nav-title {
 }
 
 .features-section-column {
-  flex-basis: 44%;
-  position: relative;
+  flex-basis: 46%;
 }
 
 .features-section-column .card img {
   width: 100%;
+  height: 100%;
 }
 .card .card-caption h3 {
   display: flex;
@@ -189,14 +189,14 @@ nav .nav-title {
 .card .card-caption {
   background-color: #ff900e;
   color: #fff;
-  /* width: 30%; */
+  /* width: 100%; */
   padding: 2rem;
   text-align: center;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  transform: translateX(-6rem);
+  position: relative;
+  left: -6rem;
+  bottom: 7rem;
   border-radius: 5px;
+  width: 25rem;
 }
 
 .year-10 {
@@ -234,6 +234,9 @@ nav .nav-title {
 
 .features-section-column-item {
   margin-bottom: 3rem;
+  padding: 2rem;
+  box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
 }
 
 .features-section-column-item h4 {
@@ -248,6 +251,58 @@ nav .nav-title {
   color: #727272;
   text-align: justify;
 }
+
+/* FACT SECTION STYLING */
+.section-fact-title-box {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
+
+.section-fact-title-box h2 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: #131313;
+}
+
+.section-fact-title-box p {
+  font-size: 1.6rem;
+  color: #727272;
+  width: 45%;
+  line-height: 2.6rem;
+}
+
+.section-fact-container {
+  margin-top: 10rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-around;
+  gap: 2rem;
+  padding: 0 2rem;
+}
+
+.section-fact-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5rem;
+  align-items: center;
+  padding: 5rem 2rem;
+  border: 1px solid #ff900e;
+  border-radius: 5px;
+}
+
+.section-fact-item h5 {
+  font-size: 3.5rem;
+  font-weight: 600;
+  color: #424242;
+}
+
+.section-fact-item p {
+  font-size: 2rem;
+  color: #424242;
+}
+
 /* Responsive Styling */
 /* Tablet and medium devices */
 @media screen and (min-width: 577px) and (max-width: 992px) {
@@ -270,6 +325,25 @@ nav .nav-title {
   nav .nav-title {
     font-size: 3rem;
   }
+
+  .features-section-container {
+    flex-direction: column;
+    gap: 4rem;
+  }
+
+  .features-section-column {
+    width: 100%;
+  }
+
+  .card .card-caption {
+    width: 80%;
+    left: 0;
+    bottom: 7rem;
+  }
+
+  .section-fact-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 /* Tablet */
@@ -280,6 +354,29 @@ nav .nav-title {
 
   .section-team-column {
     width: 100%;
+  }
+
+  .features-section-container {
+    flex-direction: column;
+    gap: 4rem;
+  }
+
+  .features-section-column {
+    width: 100%;
+  }
+
+  .card .card-caption {
+    transform: translateX(0rem);
+    bottom: 0rem;
+  }
+  .card .card-caption {
+    width: 80%;
+    left: 0;
+    bottom: 7rem;
+  }
+
+  .section-fact-title-box p {
+    width: 60%;
   }
 }
 /* Mobile Devices */
@@ -309,5 +406,17 @@ nav .nav-title {
 
   nav li:not(:last-child) {
     margin-right: 1.6rem;
+  }
+
+  .section-fact-container {
+    grid-template-columns: 1fr;
+  }
+
+  .section-fact-title-box {
+    text-align: center;
+  }
+
+  .section-fact-title-box p {
+    width: 100%;
   }
 }
