--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,11 @@ html {
   font-size: 62.5%;
 }
 
+/* main,
+body {
+  overflow: hidden;
+} */
+
 .container {
   max-width: 114rem;
   margin: 0 auto;
@@ -303,6 +308,51 @@ nav .nav-title {
   color: #424242;
 }
 
+/* SPONSOR SECTION STYLING */
+.section-sponsor {
+  margin-bottom: 13rem;
+}
+.section-sponsor-title-box {
+  text-align: center;
+}
+
+.section-sponsor-title-box h2 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: #131313;
+  margin-bottom: 2rem;
+}
+
+.section-sponsor-title-box p {
+  font-size: 1.6rem;
+  color: #727272;
+  width: 45%;
+  line-height: 2.6rem;
+  margin: 0 auto;
+}
+
+.section-sponsor-container {
+  margin-top: 13rem;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  /* display: flex;
+  align-items: center;
+  justify-content: space-between; */
+  /* flex-wrap: wrap; */
+  gap: 3rem;
+}
+
+.section-sponsor-item {
+  display: flex;
+  align-items: center;
+}
+
+.section-sponsor-item img {
+  width: 13rem;
+  height: 3rem;
+  filter: grayscale(100%);
+}
+
 /* Responsive Styling */
 /* Tablet and medium devices */
 @media screen and (min-width: 577px) and (max-width: 992px) {
@@ -344,6 +394,10 @@ nav .nav-title {
   .section-fact-container {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .section-sponsor-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 /* Tablet */
@@ -377,6 +431,9 @@ nav .nav-title {
 
   .section-fact-title-box p {
     width: 60%;
+  }
+  .section-sponsor-title-box p {
+    width: 100%;
   }
 }
 /* Mobile Devices */
@@ -418,5 +475,9 @@ nav .nav-title {
 
   .section-fact-title-box p {
     width: 100%;
+  }
+
+  .section-sponsor-container {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
